--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-.App {
+/* .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 80vmin;
   pointer-events: none;
 }
 
@@ -36,3 +36,4 @@
     transform: rotate(360deg);
   }
 }
+ */
