--- a/src/Components/TextUtilStyle.css
+++ b/src/Components/TextUtilStyle.css
@@ -1,3 +1,4 @@
+
 .app-container {
     display: flex;
     flex-direction: column;
@@ -6,15 +7,19 @@
   }
   
   .text-area {
-    width: 100%;
-    height: 100px;
-    margin-bottom: 20px;
+     width: 600px ;
+     height :200px ;
+     margin:10px;
+     border: 5px solid rgb(96, 177, 169);
+     border-radius: 15px;
+     
     
   }
   
   .button-container {
     display: flex;
-    gap: 10px;
+    gap: 20px;
+    margin-top: 10px;
   }
   
   .dark-mode {
@@ -25,4 +30,9 @@
   .light-mode {
     background-color: #fff;
     color: #333;
+  }
+  .heading{
+    color: black;
+    margin-bottom: 25px;
+
   }
